# sema-core

./: CLAUDE.md  Cargo.toml  flake.nix  sema-core-field-seed.cozo  sema-core-init.cozo  sema-core-seed.cozo
core/: body.aski  expr.aski  pattern.aski  root.aski  statement.aski  trait.aski  type.aski
flake-crates/: aski
source/: program.core
src/: lib.rs
