[package]
name = "veri-core"
version = "0.17.0"
edition = "2021"
authors = ["Li Goldragon <li@goldragon.criome.net>"]
description = "veri-core — rkyv contract types for veric↔semac (verified program)"

[lib]
name = "veri_core"
path = "src/lib.rs"

[dependencies]
aski-core = { path = "flake-crates/aski-core" }
rkyv = { version = "0.8", default-features = false, features = [
    "little_endian",
    "alloc",
] }
